--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,27 @@
 :root {
-  --theme-color: white;
-  --primary-color: #124f88;
-  --secundary-color: #f7c331;
-  --text-color-inverse: white;
-  --text-color: black;
-  --navbar-shallow-color: #e5e5e5;
+  --theme-color: black;
+  --theme-color-light: rgb(30, 28, 28);
+  --theme-color-inverse: white;
+  --primary-color: red;
+  --secondary-color: #f7c331;
+  --text-color: white;
+  --text-color-inverse: black;
+  --navbar-shallow-color: #232222;
   --menu-mobile-background-color: #3a4460;
 }
 
-body {
-  font-family: "Montserrat", sans-serif;
+/* body {	
+  font-family: 'Open Sans', sans-serif;
   background-color: var(--theme-color);
   color: var(--text-color);
   padding-top: 70px;
+} */
+
+body {
+	background: var(--theme-color);
+	font-family: 'Open Sans', sans-serif;
 }
+
 
 a {
   text-decoration: none; /* quita subrayado> */
@@ -24,4 +32,14 @@ a {
 section[id] {
   scroll-margin-top: 70px;
   border: 4px solid black;
+}
+
+.section-title h3 {
+	color: #fff;
+	font-size: 30px;
+}
+
+.contenedor {
+	width: 90%;
+	margin: auto;
 }
