--- a/css/navbar.css
+++ b/css/navbar.css
@@ -54,7 +54,7 @@
 .menu a::after {
   /* pseudo selector */
   content: "";
-  background-color: var(--secundary-color);
+  background-color: var(--secondary-color);
   position: absolute;
   left: 0;
   top: calc(100% + 4px);
@@ -81,7 +81,28 @@
 
 .logotype {
   display: flex;
-  justify-content: center;
+  justify-content: right;
+  font-family: 'Bebas Neue', cursive;
+	font-weight: normal;
+	color: var(--primary-color);
+	font-size: 40px;
+}
+
+header .logotipo {
+	font-family: 'Bebas Neue', cursive;
+	font-weight: normal;
+	color: var(--rojo);
+	font-size: 40px;
+}
+
+
+
+
+header .logotipo {
+	font-family: 'Bebas Neue', cursive;
+	font-weight: normal;
+	color: var(--rojo);
+	font-size: 40px;
 }
 
 @media (max-width: 950px) {
@@ -143,6 +164,6 @@
 
   .menu a:hover,
   .menu a.selected {
-    color: var(--secundary-color);
+    color: var(--secondary-color);
   }
 }
