--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,7 +1,7 @@
 .section {
   position: relative;
-  overflow: hidden;
-  padding: 20px;
+/*   overflow: hidden; */
+/*   padding: 0px; */
 }
 
 .section-category {
@@ -9,14 +9,7 @@
   font-size: 30px;
   font-weight: 500;
   margin-bottom: 40px;
-  text-transform: capitalize;
   color: var(--lighted-color);
-}
-
-.product {
-  position: relative;
-  overflow: hidden;
-  padding: 20px;
 }
 
 .carousel-container {
@@ -27,17 +20,6 @@
 }
 
 .carousel-container::-webkit-scrollbar {
-  display: none;
-}
-
-.product-container {
-  padding: 0 4vw;
-  display: flex;
-  overflow-x: auto;
-  scroll-behavior: smooth;
-}
-
-.product-container::-webkit-scrollbar {
   display: none;
 }
 
@@ -55,7 +37,6 @@
 .movie img{
   width:100%;
 }
-
 
 .movie-info {
   color: #eee;
@@ -102,26 +83,12 @@
   transition: transform 0.3s ease-in;
 }
 
-.product-image {
-  position: relative;
-  width: 100%;
-  height: 350px;
-  overflow: hidden;
+.movie:hover .overview{
+  transform:translateY(0)
 }
 
-.product-thumb {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.product-info {
-  width: 100%;
-  height: 100px;
-  padding-top: 10px;
-
-  color: var(--lighted-color);
-  background-color: dimgray;
+.no-results{
+  color:white;
 }
 
 .pre-btn,
