--- a/css/footer.css
+++ b/css/footer.css
@@ -1,12 +1,3 @@
-/* * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-} */
-/* .container {
-  max-width: 1170px;
-  margin: auto;
-} */
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -24,7 +15,7 @@ ul {
 }
 .footer-col h4 {
   font-size: 18px;
-  color: #ffffff;
+  color: var(--text-color);
   text-transform: capitalize;
   margin-bottom: 35px;
   font-weight: 500;
@@ -46,7 +37,7 @@ ul {
 .footer-col ul li a {
   font-size: 16px;
   text-transform: capitalize;
-  color: #ffffff;
+  color: var(--text-color);
   text-decoration: none;
   font-weight: 300;
   color: #bbbbbb;
@@ -54,7 +45,7 @@ ul {
   transition: all 0.3s ease;
 }
 .footer-col ul li a:hover {
-  color: #ffffff;
+  color: var(--text-color);
   padding-left: 8px;
 }
 .footer-col .social-links a {
@@ -66,10 +57,10 @@ ul {
   text-align: center;
   line-height: 40px;
   border-radius: 50%;
-  color: #ffffff;
+  color: var(--text-color);
   transition: all 0.5s ease;
 }
 .footer-col .social-links a:hover {
   color: #24262b;
-  background-color: #ffffff;
+  background-color: var(--lighted-color);
 }
