--- a/css/home.css
+++ b/css/home.css
@@ -9,6 +9,16 @@
 	display: flex;
 	align-items: end;
 	background-repeat: no-repeat;
+	animation: movimiento 20s infinite linear alternate; 
+
+}
+
+@keyframes movimiento{
+    from{
+        background-position: bottom left;
+    }to{
+        background-position: top right;
+    }
 }
 
 .main-movie .container {
